--- a/android/mobile/src/main/res/layout/activity_settings.xml
+++ b/android/mobile/src/main/res/layout/activity_settings.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" style="@style/settings_layout">
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android" style="@style/settings_layout">
 
-    <android.support.v7.widget.Toolbar android:id="@+id/toolbar" style="@style/toolbar"/>
+    <android.support.v7.widget.Toolbar android:id="@+id/settings_toolbar" style="@style/toolbar"/>
 
-    <ListView android:id="@android:id/list" style="@style/listview"/>
+    <LinearLayout android:id="@+id/settings_container" android:layout_below="@+id/settings_toolbar" style="@style/settings_inner_layout"/>
 
-</LinearLayout>
+</RelativeLayout>
