--- a/android/wear/src/main/res/values/styles.xml
+++ b/android/wear/src/main/res/values/styles.xml
@@ -6,15 +6,27 @@
     <style name="wear_theme" parent="@style/Theme.Wearable"/>
 
     <!-- Main -->
-    <style name="wear_main_layout">
+    <style name="wear_layout">
         <item name="android:layout_width">match_parent</item>
         <item name="android:layout_height">match_parent</item>
-        <item name="android:gravity">center</item>
-        <item name="android:orientation">vertical</item>
         <item name="android:background">@drawable/background</item>
     </style>
 
-    <style name="wear_main_inner_layout">
+    <style name="wear_inner_layout">
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:layout_gravity">center</item>
+        <item name="layout_box">all</item>
+    </style>
+
+    <style name="wear_inner_inner_layout">
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:layout_gravity">center</item>
+        <item name="android:orientation">vertical</item>
+    </style>
+
+    <style name="wear_buttons_layout">
         <item name="android:layout_width">wrap_content</item>
         <item name="android:layout_height">wrap_content</item>
         <item name="android:orientation">horizontal</item>
