--- a/android/mobile/src/main/res/layout/widget_large.xml
+++ b/android/mobile/src/main/res/layout/widget_large.xml
@@ -13,7 +13,15 @@
         </LinearLayout>
 
         <LinearLayout style="@style/widget_button_layout">
+            <ImageButton android:id="@+id/widget_seek_back_button" style="@style/widget_center_button" android:src="@drawable/ic_fast_rewind_white_36dp" android:contentDescription="@string/image_content_description"/>
+        </LinearLayout>
+
+        <LinearLayout style="@style/widget_button_layout">
             <ImageButton android:id="@+id/widget_play_button" style="@style/widget_center_button" android:src="@drawable/ic_play_arrow_white_36dp" android:contentDescription="@string/image_content_description"/>
+        </LinearLayout>
+
+        <LinearLayout style="@style/widget_button_layout">
+            <ImageButton android:id="@+id/widget_seek_forward_button" style="@style/widget_center_button" android:src="@drawable/ic_fast_forward_white_36dp" android:contentDescription="@string/image_content_description"/>
         </LinearLayout>
 
         <LinearLayout style="@style/widget_button_layout">
@@ -25,7 +33,7 @@
     <LinearLayout style="@style/widget_large_inner_layout">
 
         <LinearLayout style="@style/widget_button_layout">
-            <ImageButton android:id="@+id/widget_power_button" style="@style/widget_left_button" android:src="@drawable/ic_settings_power_white_24dp" android:contentDescription="@string/image_content_description"/>
+            <ImageButton android:id="@+id/widget_power_button" style="@style/widget_left_button" android:src="@drawable/ic_power_settings_new_white_24dp" android:contentDescription="@string/image_content_description"/>
         </LinearLayout>
 
         <LinearLayout style="@style/widget_button_layout">
