--- a/android/mobile/src/main/res/values-v21/styles.xml
+++ b/android/mobile/src/main/res/values-v21/styles.xml
@@ -25,10 +25,7 @@
     </style>
 
     <!-- List view -->
-    <style name="listview_base" parent="android:Widget.Material.Light.ListView">
-        <item name="android:scrollbarThumbVertical">@drawable/scrollbar</item>
-        <item name="android:scrollbarSize">6dp</item>
-    </style>
+    <style name="listview_base" parent="android:Widget.Material.Light.ListView"/>
 
     <style name="listview_empty_base">
         <item name="android:fontFamily">sans-serif-medium</item>
