--- a/android/mobile/src/main/res/xml/shortcuts.xml
+++ b/android/mobile/src/main/res/xml/shortcuts.xml
@@ -2,7 +2,7 @@
 
 <shortcuts xmlns:tools="http://schemas.android.com/tools" xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <shortcut android:shortcutId="last_computer" android:icon="@mipmap/ic_launcher" android:shortcutShortLabel="@string/shortcut_last_computer" tools:ignore="UnusedAttribute">
+    <shortcut android:shortcutId="last_computer" android:icon="@drawable/ic_shortcut_computer" android:shortcutShortLabel="@string/shortcut_last_computer" tools:ignore="UnusedAttribute">
         <intent android:action="android.intent.action.VIEW" android:targetPackage="net.olejon.spotcommander" android:targetClass="net.olejon.spotcommander.WebViewActivity"/>
     </shortcut>
 
